# AppPhotoEdite

./: README.md
api-gateway/: .env  package.json  server.js
api-gateway/src/config/: proxy.js
api-gateway/src/controllers/: gatewayController.js
api-gateway/src/middleware/: authMiddleware.js  logger.js
api-gateway/src/routes/: index.js
authentication-service/: .env  package.json  server.js
authentication-service/src/models/: authModel.js
cdn-service/: .env  package.json  server.js
character-service/: .env  package.json  server.js
lib/: constants.dart  main.dart  routes.dart
lib/constants/: api_constants.dart
lib/models/: api_response.dart  auth.dart  character.dart  photo.dart  user.dart  user_profile.dart
lib/screens/: adjust_photo_screen.dart  anime_conversion_screen.dart  character_upload_screen.dart  combine_photo.dart  combine_photo_screen.dart  enhance_photo_screen.dart  face_expression_screen.dart  home_screen.dart  login_screen.dart  photo_detail_screen.dart  photo_edit_screen.dart  profile_screen.dart  register_screen.dart  remove_background_screen.dart
lib/utils/: error_handler.dart  image_utils.dart
lib/widgets/: custom_button.dart  image_card.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
photo-enhance-service/: .env  pyproject.toml  server.py
photo-enhance-service/src/controllers/: enhance_controller.py
photo-enhance-service/src/routes/: enhance_route.py
photo-enhance-service/src/services/: enhance_service.py
photo-service/: .env  package.json  server.js
userProfile-service/: .env  package.json  server.js
(+29 files in other folders)
